Don't forbid GPU process if WebGL/WebGL2 is disabled on GPU but not browser.

BUG=662170
TEST=media.tough_video_cases,content_unittests
R=kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2505473002
Cr-Commit-Position: refs/heads/master@{#432073}

Former-commit-id: 5881e9b3bc7c96dc8a0d5ec823078e3b4d80a85c