gpu/config/gpu_util.h
@@ -20,10 +20,6 @@ namespace gpu {
 
 struct GPUInfo;
 
-// Merge features in src into dst.
-GPU_EXPORT void MergeFeatureSets(
-    std::set<int>* dst, const std::set<int>& src);
-
 // With provided GPUInfo, compute the driver bug workarounds and disabled
 // extensions for the current system, and append the |command_line|.
 GPU_EXPORT void ApplyGpuDriverBugWorkarounds(
