gpu/config/gpu_util_unittest.cc
@@ -18,46 +18,6 @@
 
 namespace gpu {
 
-TEST(GpuUtilTest, MergeFeatureSets) {
-  {
-    // Merge two empty sets.
-    std::set<int> src;
-    std::set<int> dst;
-    EXPECT_TRUE(dst.empty());
-    MergeFeatureSets(&dst, src);
-    EXPECT_TRUE(dst.empty());
-  }
-  {
-    // Merge an empty set into a set with elements.
-    std::set<int> src;
-    std::set<int> dst;
-    dst.insert(1);
-    EXPECT_EQ(1u, dst.size());
-    MergeFeatureSets(&dst, src);
-    EXPECT_EQ(1u, dst.size());
-  }
-  {
-    // Merge two sets where the source elements are already in the target set.
-    std::set<int> src;
-    std::set<int> dst;
-    src.insert(1);
-    dst.insert(1);
-    EXPECT_EQ(1u, dst.size());
-    MergeFeatureSets(&dst, src);
-    EXPECT_EQ(1u, dst.size());
-  }
-  {
-    // Merge two sets with different elements.
-    std::set<int> src;
-    std::set<int> dst;
-    src.insert(1);
-    dst.insert(2);
-    EXPECT_EQ(1u, dst.size());
-    MergeFeatureSets(&dst, src);
-    EXPECT_EQ(2u, dst.size());
-  }
-}
-
 TEST(GpuUtilTest, StringToFeatureSet) {
   {
     // zero feature.
